1999-09-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garopt.adb, s-garpar.adb, s-gartyp.ads, s-garuni.adb,
 	s-garuni.ads: Change reconnection terminology.

	* all files: Use soft links for POs in order to have a light run
 	time in the near future. Adapt code to changes above.

	* s-garuti.adb, s-garuti.ads: Move protected objects to s-gaprob.

	* s-gasoli.ads: Define abstract types for synchronization objects
 	(soft links for all the Garlic PO).

	* s-gaprob.adb, s-gaprob.ads: Concrete implementation of
	synchronization objects.

	* Makefile.in, Makefile.am: Remove use of s-garloc.* and add
 	s-gaprob.* (s-garloc.adb and s-garloc.ads are not removed from
 	repository).
	
	* s-gartyp.ads: Move some procedures to Garlic.Utils. Body is no
 	longer needed (removed from repository to avoid compilation
 	problems).

1999-08-24  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-stratt.adb: Initialize variables in some unmarshalling
	procedures (wide characters, short integers).

1999-08-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: Remove useless with clause.

1999-08-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garter.adb: Change use of global critical section into use of
 	specific mutex to avoid deadlocks.

1999-08-02  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: Implement yet another termination algorithm, much
	more efficient than the two previous ones. This one can terminate
	in only one wave in some cases, two waves in the worst case.

	* s-garhea.adb: Call Activity_Detected only when sending
	Remote_Call related messages. Part of the brand new termination
	algorithm.

1999-07-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garpar.ads, s-garpar.adb: Export Dump_Partition_Table so that
	it can be used to debug the termination algorithm.
	Fix bug in Online_Partitions (was using Is_Known instead of
	Is_Online).
	Rewrite Matching_Partitions more efficiently.

1999-07-28  Samuel Tardieu  <sam@inf.enst.fr>
